fixed product line viewer alignment

--- a/cust.css
+++ b/cust.css
@@ -52,8 +52,8 @@
 }
 .swiper-slide {
   flex-shrink: 0;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 200px;
   position: relative;
   transition-property: transform;
 }
